# serializer version: 1
# name: test_command[gps-admin-readonly]
  list([
    'view_company',
    'view_followupgroup',
    'view_followupgroupmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescriberorganization',
    'view_jobseekerprofile',
    'view_user',
  ])
# ---
# name: test_command[gps-admin]
  list([
    'view_company',
    'add_followupgroup',
    'change_followupgroup',
    'delete_followupgroup',
    'view_followupgroup',
    'add_followupgroupmembership',
    'change_followupgroupmembership',
    'delete_followupgroupmembership',
    'view_followupgroupmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescriberorganization',
    'change_jobseekerprofile',
    'view_jobseekerprofile',
    'add_user',
    'change_user',
    'hijack_user',
    'view_user',
  ])
# ---
# name: test_command[itou-admin-readonly]
  list([
    'view_emailaddress',
    'view_approval',
    'view_cancelledapproval',
    'view_poleemploiapproval',
    'view_prolongation',
    'view_prolongationrequest',
    'view_suspension',
    'view_commune',
    'view_country',
    'view_department',
    'view_city',
    'view_announcementcampaign',
    'view_announcementitem',
    'view_company',
    'view_companymembership',
    'view_jobdescription',
    'view_siaeconvention',
    'view_siaefinancialannex',
    'view_administrativecriteria',
    'view_eligibilitydiagnosis',
    'view_geiqadministrativecriteria',
    'view_geiqeligibilitydiagnosis',
    'view_geiqselectedadministrativecriteria',
    'view_selectedadministrativecriteria',
    'view_email',
    'view_employeerecord',
    'view_employeerecordtransitionlog',
    'view_employeerecordupdatenotification',
    'view_assessment',
    'view_assessmentcampaign',
    'view_employee',
    'view_employeecontract',
    'view_employeeprequalification',
    'view_institution',
    'view_institutionmembership',
    'view_employerinvitation',
    'view_laborinspectorinvitation',
    'view_prescriberwithorginvitation',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_appellation',
    'view_rome',
    'view_prescribermembership',
    'view_prescriberorganization',
    'view_calendar',
    'view_evaluatedadministrativecriteria',
    'view_evaluatedjobapplication',
    'view_evaluatedsiae',
    'view_evaluationcampaign',
    'view_sanctions',
    'view_jobseekerprofile',
    'view_user',
    'view_pksupportremark',
    'view_uuidsupportremark',
  ])
# ---
# name: test_command[itou-admin]
  list([
    'add_emailaddress',
    'change_emailaddress',
    'delete_emailaddress',
    'view_emailaddress',
    'add_approval',
    'change_approval',
    'delete_approval',
    'view_approval',
    'view_cancelledapproval',
    'view_poleemploiapproval',
    'add_prolongation',
    'change_prolongation',
    'delete_prolongation',
    'view_prolongation',
    'change_prolongationrequest',
    'delete_prolongationrequest',
    'view_prolongationrequest',
    'add_suspension',
    'change_suspension',
    'delete_suspension',
    'view_suspension',
    'view_commune',
    'view_country',
    'view_department',
    'view_city',
    'add_announcementcampaign',
    'change_announcementcampaign',
    'delete_announcementcampaign',
    'view_announcementcampaign',
    'add_announcementitem',
    'change_announcementitem',
    'delete_announcementitem',
    'view_announcementitem',
    'add_company',
    'change_company',
    'delete_company',
    'view_company',
    'add_companymembership',
    'change_companymembership',
    'view_companymembership',
    'view_jobdescription',
    'change_siaeconvention',
    'view_siaeconvention',
    'view_siaefinancialannex',
    'view_administrativecriteria',
    'add_eligibilitydiagnosis',
    'change_eligibilitydiagnosis',
    'delete_eligibilitydiagnosis',
    'view_eligibilitydiagnosis',
    'view_geiqadministrativecriteria',
    'add_geiqeligibilitydiagnosis',
    'change_geiqeligibilitydiagnosis',
    'delete_geiqeligibilitydiagnosis',
    'view_geiqeligibilitydiagnosis',
    'add_geiqselectedadministrativecriteria',
    'change_geiqselectedadministrativecriteria',
    'delete_geiqselectedadministrativecriteria',
    'view_geiqselectedadministrativecriteria',
    'add_selectedadministrativecriteria',
    'change_selectedadministrativecriteria',
    'delete_selectedadministrativecriteria',
    'view_selectedadministrativecriteria',
    'view_email',
    'change_employeerecord',
    'delete_employeerecord',
    'view_employeerecord',
    'view_employeerecordtransitionlog',
    'view_employeerecordupdatenotification',
    'view_assessment',
    'add_assessmentcampaign',
    'change_assessmentcampaign',
    'view_assessmentcampaign',
    'view_employee',
    'view_employeecontract',
    'view_employeeprequalification',
    'add_institution',
    'change_institution',
    'view_institution',
    'add_institutionmembership',
    'change_institutionmembership',
    'view_institutionmembership',
    'change_employerinvitation',
    'delete_employerinvitation',
    'view_employerinvitation',
    'change_laborinspectorinvitation',
    'delete_laborinspectorinvitation',
    'view_laborinspectorinvitation',
    'change_prescriberwithorginvitation',
    'delete_prescriberwithorginvitation',
    'view_prescriberwithorginvitation',
    'add_jobapplication',
    'change_jobapplication',
    'delete_jobapplication',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_appellation',
    'view_rome',
    'add_prescribermembership',
    'change_prescribermembership',
    'view_prescribermembership',
    'add_prescriberorganization',
    'change_prescriberorganization',
    'delete_prescriberorganization',
    'view_prescriberorganization',
    'add_calendar',
    'change_calendar',
    'view_calendar',
    'view_evaluatedadministrativecriteria',
    'view_evaluatedjobapplication',
    'view_evaluatedsiae',
    'view_evaluationcampaign',
    'view_sanctions',
    'change_jobseekerprofile',
    'view_jobseekerprofile',
    'add_user',
    'change_user',
    'delete_user',
    'hijack_user',
    'view_user',
    'add_pksupportremark',
    'change_pksupportremark',
    'view_pksupportremark',
    'add_uuidsupportremark',
    'change_uuidsupportremark',
    'view_uuidsupportremark',
  ])
# ---
# name: test_command[logs]
  list([
    'group name=gps-admin created',
    'group name=gps-admin-readonly created',
    'group name=itou-admin created',
    'group name=itou-admin-readonly created',
    'group name=pilotage-admin created',
    'group name=pilotage-admin-readonly created',
    'group name=rdvi created',
    'All done!',
  ])
# ---
# name: test_command[pilotage-admin-readonly]
  list([
    'view_statsdashboardvisit',
    'view_approval',
    'view_cancelledapproval',
    'view_poleemploiapproval',
    'view_prolongation',
    'view_suspension',
    'view_company',
    'view_companymembership',
    'view_institution',
    'view_institutionmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescribermembership',
    'view_prescriberorganization',
    'view_user',
  ])
# ---
# name: test_command[pilotage-admin]
  list([
    'view_statsdashboardvisit',
    'view_approval',
    'view_cancelledapproval',
    'view_poleemploiapproval',
    'view_prolongation',
    'view_suspension',
    'view_company',
    'view_companymembership',
    'add_institution',
    'change_institution',
    'view_institution',
    'add_institutionmembership',
    'change_institutionmembership',
    'view_institutionmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescribermembership',
    'view_prescriberorganization',
    'hijack_user',
    'view_user',
  ])
# ---
# name: test_command[rdvi]
  list([
    'view_company',
    'view_companymembership',
    'view_user',
  ])
# ---
